promijenjen redoslijed brojanja redova